src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__text_input_overlay__tests__snapshot_full_render_border_display.snap
---
source: src/tui/widgets/text_input_overlay.rs
expression: snapshot
---


               Message to Worker 42

               |






               Ctrl+Enter=send | Esc=cancel
