src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__text_input_overlay__tests__snapshot_full_render_empty_80x24.snap
---
source: src/tui/widgets/text_input_overlay.rs
expression: snap(&buffer)
---






                 Message to Worker 1

                 |








                 Ctrl+Enter=send | Esc=cancel
