src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__text_input_overlay__tests__snapshot_full_render_five_lines_80x24.snap
---
source: src/tui/widgets/text_input_overlay.rs
expression: snap(&buffer)
---






                 Message to Worker 3

                 First line
                 Second line
                 Third line
                 Fourth line
                 Fifth line|




                 Ctrl+Enter=send | Esc=cancel
