src/tui/widgets/snapshots/ralph_wiggum__tui__widgets__text_input_overlay__tests__snapshot_full_render_text_40x15.snap
---
source: src/tui/widgets/text_input_overlay.rs
expression: snap(&buffer)
---


 Message to Worker 6

 Short text
 Another line|





 Ctrl+Enter=send | Esc=cancel
